adjust spotlight svg height to 99% to prevent overflow

--- a/weddingthingy/app/page.css
+++ b/weddingthingy/app/page.css
@@ -110,7 +110,7 @@ p {
 
 .spotlight .svg-path svg {
   width: 100%;
-  height: 100%;
+  height: 99%;
 }
 
 @media (max-width: 1000px) {
